Do not use immutable list in HpoDiseaseGeneMap